# Stajer-K-QtApp

./: .gitignore  CMakeLists.txt  LayOut.pro  MyGraphicsView.cpp  MyGraphicsView.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsview.cpp  mygraphicsview.h  run_emulator.sh  run_in_screen.sh
util/: named_type.h
